data/derived/comb/progs/unify/prog1463.ml.out
Characters 67-70:
  if(1)
    ^^^
Error: This expression has type int but an expression was expected of type
         bool
